[package]
name = "pack2"
version = "0.1.0"
authors = ["Michael Sprecher <dev@0x23.ch>"]
edition = "2018"


[workspace]
members = [
   ".",
   "pack2-util",
]

[dependencies]
pack2-util = { path = "pack2-util", version="0.1.0" }

bstr = "0.2.12"
hashbrown = "0.7.2"
structopt = "0.3"

faster-hex = { git = "https://github.com/ggriffiniii/faster-hex", branch = "master" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
